ingress/wls-admin-service.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: admin-server-1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        server: admin-server-1
    spec:
      hostname: admin-server-1
      containers:
        - name: admin-server-1
          image: store/oracle/weblogic:12.2.1.2
          ports:
            - containerPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: admin-server-1
  annotations:
    traefik.backend.loadbalancer.stickiness: "true"
spec:
  type: NodePort
  selector:
    server: admin-server-1
  ports:
    - port: 7001
      nodePort: 30002
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: admin-server-2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        server: admin-server-2
    spec:
      hostname: admin-server-2
      containers:
        - name: admin-server-2
          image: store/oracle/weblogic:12.2.1.2
          ports:
            - containerPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: admin-server-2
  annotations:
    traefik.backend.loadbalancer.stickiness: "true"
spec:
  type: NodePort
  selector:
    server: admin-server-2
  ports:
    - port: 7001
      nodePort: 30003
